# bob.fusion.base

./: .gitignore  CHANGELOG  MANIFEST.in  README.md  README.rst  buildout.cfg  develop.cfg  pyproject.toml  requirements.txt  run.sh  setup.py  version.txt
bob/fusion/base/: __init__.py  fusion.py  utils.py
bob/fusion/base/algorithm/: AND.py  Algorithm.py  AlgorithmBob.py  CascadeFuse.py  Empty.py  GMM.py  HarmonicMean.py  LLR.py  LogisticRegression.py  MLP.py  Weighted_Sum.py  __init__.py  mlp_train_helper.py
bob/fusion/base/config/algorithm/: and.py  calibrate.py  gmm.py  llr.py  llr_skl.py  mean.py  mlp.py  plr_2.py  plr_3.py
bob/fusion/base/data/: scores-dev-1  scores-dev-2  scores-eval-1  scores-eval-2
bob/fusion/base/normalizer/: MinMaxNorm.py  Normalizer.py  ZNorm.py  __init__.py
bob/fusion/base/preprocessor/: LLR.py  Tanh.py  ZNorm.py  __init__.py
bob/fusion/base/script/: __init__.py  bob_fuse.py  bob_fusion_decision_boundary.py  boundary.py  fuse.py  fuse_several_systems.py  fusion.py  plot_fusion_decision_boundary.py  resource.py
bob/fusion/base/test/: test_algorithm.py  test_preprocessor.py  test_scripts.py
bob/fusion/base/test/data/: scores-fused-eval  scores-fused-eval-licit  scores-fused-eval-spoof  scores-fused-train  scores-fused-train-licit  scores-fused-train-spoof
bob/fusion/base/tools/: __init__.py  command_line.py  common.py  plotting.py
conda/: meta.yaml
doc/: bob.fusion.base.algorithm.rst  bob.fusion.base.config.algorithm.rst  bob.fusion.base.config.rst  bob.fusion.base.rst  bob.fusion.base.script.rst  bob.fusion.base.tools.rst  bob.fusion.rst  bob.rst  conf.py  extra-intersphinx.txt  fusion.rst  guide.rst  index.rst  links.rst  modules.rst  py_api.rst
src/bob/fusion/base/: __init__.py
src/bob/fusion/base/algorithm/: Algorithm.py  GMM.py
src/bob/fusion/base/config/algorithm/: gmm.py  mean.py  plr_2.py  plr_3.py
src/bob/fusion/base/preprocessor/: Tanh.py  ZNorm.py
src/bob/fusion/base/script/: __init__.py  boundary.py  fuse.py  fusion.py  resource.py
src/bob/fusion/base/tools/: __init__.py  plotting.py
tests/: test_algorithm.py  test_scripts.py
tests/data/: scores-eval-1  scores-eval-2  scores-fused-eval-spoof  scores-fused-train-licit  scores-train-1  scores-train-2
