[build-system]
    requires = ["setuptools>=61.0.0", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "bob.fusion.base"
    version = "0.1.6b0"
    requires-python = ">=3.9"
    description = "Score fusion in biometric and pad experiments"
    dynamic = ["readme"]
    license = {text = "GPLv3 License"}
    authors = [
    {name = "Amir Mohammadi", email = "amir.mohammadi@idiap.ch"},
    ]
    keywords = ["bob", "score fusion", "evaluation", "biometric"]

    classifiers=[
        "Framework :: Bob",
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Natural Language :: English",
        "Programming Language :: Python",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
    ]
    dependencies = [
        "bob",
        "bob.measure",
        "bob.learn.em",
        "bob.bio.base",
        "clapper",
        "matplotlib",
        "numpy",
        "scikit-learn",
    ]

[project.urls]
    documentation = "https://www.idiap.ch/software/bob/docs/bob/bob.fusion.base/master/sphinx/"
    homepage      = "https://pypi.org/project/bob.fusion.base/"
    repository    = "https://gitlab.idiap.ch/bob/bob.fusion.base"
    changelog     = "https://gitlab.idiap.ch/bob/bob.fusion.base/-/releases"

[project.optional-dependencies]
    qa = ["pre-commit"]
    doc = [
        "sphinx",
        "sphinx_rtd_theme",
        "sphinx-autodoc-typehints",
        "auto-intersphinx",
        "sphinxcontrib-programoutput",
        "bob.pad.base",
        ]
    test = [
        "pytest",
        "pytest-cov",
        "coverage",
        ]

[tool.setuptools]
    zip-safe = false
    package-dir = {"" = "src"}

[tool.setuptools.dynamic]
    readme = {file = "README.md", content-type = "text/markdown"}

[project.entry-points."bob.cli"]
    fusion = "bob.fusion.base.script.fusion:fusion"

[project.entry-points."bob.fusion.cli"]
    fuse     = "bob.fusion.base.script.fuse:fuse"
    resource = "bob.fusion.base.script.resource:resource"
    boundary = "bob.fusion.base.script.boundary:boundary"

[project.entry-points."bob.fusion.algorithm"]
    mean       = "bob.fusion.base.config.algorithm.mean:algorithm"
    mean-tanh  = "bob.fusion.base.config.algorithm.mean:algorithm_tanh"
    llr        = "bob.fusion.base.config.algorithm.llr_skl:algorithm"
    llr-tanh   = "bob.fusion.base.config.algorithm.llr_skl:algorithm_tanh"
    plr-2      = "bob.fusion.base.config.algorithm.plr_2:algorithm"
    plr-2-tanh = "bob.fusion.base.config.algorithm.plr_2:algorithm_tanh"
    plr-3      = "bob.fusion.base.config.algorithm.plr_3:algorithm"
    plr-3-tanh = "bob.fusion.base.config.algorithm.plr_3:algorithm_tanh"
    gmm        = "bob.fusion.base.config.algorithm.gmm:algorithm"
    gmm-tanh   = "bob.fusion.base.config.algorithm.gmm:algorithm_tanh"

[tool.distutils.bdist_wheel]
    universal = true

[tool.isort]
    profile = "black"
    line_length = 80
    order_by_type = true
    lines_between_types = 1

[tool.black]
    line-length = 80

[tool.coverage.run]
    relative_files = true

[tool.pytest.ini_options]
    addopts = [
        "--import-mode=append",
        "--cov-report=term-missing",
        "--cov=bob.fusion.base",
    ]
    junit_logging = "all"
    junit_log_passing_tests = false
